test_fixtures/if/class_in_then.lox
// ParserError: UnexpectedExpressionToken found Class from l2c11 to l2c16
if (true) class Foo {}
